[package]
name = "aws_health_exporter"
version = "0.4.4"
authors = ["Vlad Vasiliu"]
description = "Prometheus exporter for AWS Health events."
edition = "2018"
license-file = "COPYING"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "~0.4", features = ["serde"] }
clap = { version = "~2.33", features = ["color"] }
fern = { version = "~0.6", features = ["colored"] }
lazy_static = { version = "~1.4" }
log = { version = "~0.4" }
regex = { version = "~1.3" }
rusoto_core = { version = "~0.45" }
rusoto_credential = { version = "~0.45" }
rusoto_health = { version = "~0.45" }
rusoto_signature = { version = "~0.45" }
rusoto_sts = { version = "~0.45" }
prometheus = { version = "~0.9", features = ["process"] }
tokio = { version = "~0.2", features = ["rt-core", "macros", "time"] }
warp = { version = "~0.2", features = ["tls"] }

[profile.release]
lto = true
incremental = true
codegen-units = 1
panic = "abort"
