[package]
name = "aws_health_exporter"
version = "0.6.0-alpha.1"
authors = ["Vlad Vasiliu"]
description = "Prometheus exporter for AWS Health events."
edition = "2021"
license-file = "COPYING"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.12.0"
aws-sdk-health = "0.12.0"
color-eyre = "0.5"
#chrono = { version = "~0.4", features = ["serde"] }
lazy_static = { version = "~1.4" }
regex = { version = "~1.5" }
prometheus = { version = "~0.13", features = ["process"] }
tokio = { version = "~1", features = ["macros", "parking_lot", "rt-multi-thread", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
warp = { version = "~0.3", features = ["tls"] }

[profile.release]
lto = true
incremental = true
codegen-units = 1
strip = true
panic = "abort"
